--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>My first day at Tech4Girls i was able to make new friends even though i'm the shy type. </p>
-    
+    <script src="src/index.js"></script>
 </body>
 </html>
